# dicom-tools

./: .coveragerc  .gitignore  Instructions.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: unittest.yml
dicom_tools/: __init__.py  _conversion.py  _dicom_dump.py  _dicom_io.py  _utils.py  multiframe_2_stack.py
dicom_tools/scripts/: copy_from_list.py  copy_headers.py  create_inventory.py  dicom_to_nifti.py  dicoms_to_nifti.py  nifti_to_dicom.py  nifti_to_dicoms.py  print_info.py  stack_to_dicom.py
dicom_tools/tests/data/dataset2/: 1.3.6.1.4.1.23739.99.1.29.6780.1446051872147.13.1.389.5001.3.dcm
tests/: test_dicom_dump.py  test_dicom_io.py  test_utils.py
tests/data/dataset1/: 1.3.6.1.4.1.23739.99.1.28.8307.1445950363212.10.1.2870.3.3.dcm
tests/data/dataset2/: 1.3.6.1.4.1.23739.99.1.29.6780.1446051872147.13.1.389.5001.1.dcm  1.3.6.1.4.1.23739.99.1.29.6780.1446051872147.13.1.389.5001.2.dcm
tests/data/dataset3/: 1.3.6.1.4.1.23739.99.1.277.1668.1445881861867.5.1.8208.6.6.dcm
