# NOTE: No multi-line configs permitted!
# https://github.com/pypa/setuptools/issues/1390
[metadata]
name = dicom-tools
version = attr: dicom_tools.__version__
url = https://github.com/hirsch-lab/dicom-tools
license = MIT
license_file = LICENSE
description = A set of command line utilities to to operate with DICOM files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Norman Juchler
keywords = DICOM, tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
setup_requires = setuptools>=46.4.0
python_requires = >=3.6
install_requires =
    pandas>=1.1             # Data analysis library
    pydicom>=2.1            # DICOM data structure for python
    progressbar2

[options.entry_points]
console_scripts =
    dicom-copy-from-list = dicom_tools.scripts.copy_from_list:main
    dicom-copy-headers = dicom_tools.scripts.copy_headers:main
    dicom-inventory = dicom_tools.scripts.create_inventory:main
    dicom-print-info = dicom_tools.scripts.print_info:main
    dicom-from-stack = dicom_tools.scripts.stack_to_dicom:main
